z-index fix

--- a/res/css/general.css
+++ b/res/css/general.css
@@ -255,6 +255,7 @@ header div#newMessages {
     position: fixed;
     top: 0;
     left: 0;
+    z-index: 1;
     width: 100%;
     height: 100%;
     background: black;
@@ -266,6 +267,7 @@ header div#newMessages {
     position: fixed;
     top: 10px;
     left: 10px;
+    z-index: 1;
     width: calc(100% - 20px);
     max-width: 400px;
     height: calc(100% - 75px);
@@ -281,6 +283,7 @@ header div#newMessages {
     position: fixed;
     bottom: 10px;
     left: 50%;
+    z-index: 1;
     transform: translateX(-50%);
     display: none;
 }
@@ -293,6 +296,7 @@ header div#newMessages {
     position: fixed;
     top: 0;
     left: 0;
+    z-index: 1;
     width: 100%;
     height: 100%;
     background: black;
@@ -303,6 +307,7 @@ header div#newMessages {
     position: fixed;
     top: 50%;
     left: 50%;
+    z-index: 1;
     width: 80%;
     max-width: 600px;
     background: #ededed;
