--- a/res/css/view-game.css
+++ b/res/css/view-game.css
@@ -210,6 +210,7 @@ body.hover #drawPile.enabled:hover, body.hover #ownCards picture.enabled:hover, 
     position: fixed;
     top: 0;
     left: 0;
+    z-index: 1;
     width: 100%;
     height: 100%;
     background: #000d;
